# two-fa

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test.py  two_fa.py  twofa.py
twofa/: core.py
utils/: core.py
