[metadata]
# replace with your username:
name = two-fa
version = 1.0.0
url = https://github.com/finedevsam/two-fa
author = Samson Ilemobayo
author_email = ilemobayosamson@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = TwoFa typically refers to Two-Factor Authentication, a security process that requires users to provide two different authentication factors to verify their identity.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6